--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-gesture-handler": "^2.21.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.1.0"
+    "react-native-screens": "^4.1.0",
+    "react-native-track-player": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
